Correct logo alignment in header type center

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -117,7 +117,7 @@
 
 .header-center {
   .header-content {
-    flex-grow: 1;
+    flex: 1;
 
     &:last-child {
       justify-content: flex-end;
